Update Wrapped Service